--- a/CSS/style.css
+++ b/CSS/style.css
@@ -36,7 +36,7 @@ nav ul li {
 	display: inline-block;
 	line-height: 50px;
 	border: 1px solid #000;
-	margin-right: 30px;
+	margin-right: 20px;
 }
 
 nav ul li a {
@@ -44,7 +44,7 @@ nav ul li a {
 	padding-left: 5px;
 	padding-right: 5px;
 	text-decoration: none; /*fjerner linjen under, der viser det er et link*/
-	font-family: poppins;
+	font-family: poppins, arial;
 	color: black;
 	display: block; /*Gør at man ikke behøver trykke direkte på teksten, men også kan trykke udenom*/
 }
@@ -52,6 +52,35 @@ nav ul li a {
 .logo-me {
 	margin: 0 auto;
 	align-items: center;
+}
+
+.scroll {
+	position: fixed;
+	top: 50%;
+	right: 0;
+	width: 40px; 
+	height: 30px; 
+	display: block;
+	text-align: center; 
+	color: #fff; 
+	font-size: 10px;
+	font-family: poppins, arial; 
+	text-decoration: none; 
+	z-index: 10000; /*Denne hjælper med, at den hele tiden er foran alt andet på siden*/
+}
+
+.scroll.top {
+	top: calc(50% - 40px); /*Hjælper med at placere diven fra toppen*/
+	background: #CAC5E4;
+	border: 1px solid #000;
+	padding-top: 10px;
+}
+
+.scroll.bottom {
+	top: calc(50% - 0px);
+	background: #CAC5E4;
+	border: 1px solid #000;
+	padding-top: 10px;
 }
 
 main.welcomepicture {
@@ -63,16 +92,24 @@ main.welcomepicture {
 }
 
 .welcometext {
-	font-family: poppins;
+	font-family: poppins, arial;
 	color: #482980;
 	font-weight: bold;
 	text-align: center;
+	font-size: 70%;
 	display: grid;
 	margin: 0 auto;
-	padding-top: 60px;
-	padding-left: 70px;
+	padding-top: 30%; 
 }
 
+.welcometext h1 {
+	background-color: rgba(252, 233, 243, 0.5)
+}
+
+
+.welcometext p {
+	background-color: rgba(252, 233, 243, 0.5)
+}
 
 
 main ul li {
@@ -117,25 +154,29 @@ main ul li {
 	background-color: #FCE9F3;
 	margin: auto;
 	align-content: center;
-	padding: 20px;
-}
-
-.about h1 {
-	font-family: poppins;
-	text-align: center;
 }
 
 .about h2 {
-	font-family: poppins;
+
+	font-family: poppins, arial;
+	text-align: center;
+	padding-top: 5%;
+}
+
+.about h3 {
+	font-family: poppins, arial;
 	text-align: center;
 	margin-top: 20px;
 }
 
 .about p {
-	font-family: poppins;
+	font-family: poppins, arial;
 	color: black;
 	text-align: center;
-	padding: 30px;
+	padding-left: 10%;
+	padding-right: 10%;
+	padding-bottom: 5%;
+	padding-top: 5%;
 }
 
 .kompetencer {
@@ -144,15 +185,15 @@ main ul li {
 }
 
 .pinkbox {
-	width: 100%;
+
 	background-color: #FCE9F3;
 	margin: auto;
 	align-content: center;
 	padding: 20px;
 }
 
-.pinkbox h1 {
-	font-family: poppins;
+.pinkbox h2 {
+	font-family: poppins, arial;
 	text-align: center;
 	margin-bottom: 50px;
 	margin-top: 30px;
@@ -174,7 +215,7 @@ main ul li {
 .icons p {
 	display: grid;
 	margin: 0 auto;
-	font-family: poppins;
+	font-family: poppins, arial;
 	text-align: center;
 	padding-bottom: 30px;
 	margin-top: 20px;
@@ -186,8 +227,8 @@ main ul li {
 	align-items: center;
 }
 
-.portfolio h1 {
-	font-family: poppins;
+.portfolio h2 {
+	font-family: poppins, arial;
 	text-align: center;
 	margin-bottom: 20px;
 }
@@ -203,10 +244,70 @@ main ul li {
 }
 
 .gallery img {
-	display: grid;
 	margin: 0 auto;
 	width: 200px; 
 	height: 200px; 
+}
+
+.gallery .box {
+	position: relative;
+	width: 200px;
+	height: 200px; 
+	display: inline-block;
+}
+
+.gallery .box .imgbox {
+	position: relative;
+	overflow: hidden;
+}
+
+.gallery .box .imgbox img {
+	max-width: 100%; 
+	transition: transform 2s; /*angivet tid for billedet at scalere op*/
+}
+
+.gallery .box:hover .imgbox img {
+	transform: scale(1.2);	/*Hvor meget billedet bagved scalerer op*/
+}
+
+.gallery .box .details {
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	bottom: 10px; 
+	right: 10px;
+	background: rgba(0,0,0,.7); /*Red, Green, Blue - ALPHA (Alpha hjælper med gennemsigtigheden)*/
+	transform: scaleY(0); /*Boksen udformer sig på Y aksen (lodret)*/
+	transition: transform .5s;
+}
+
+.gallery .box:hover .details {
+	transform: scaleY(1);
+}
+
+.gallery .box .details .content {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%); /*Positionerer teksten i boksen*/
+	text-align: center; 
+	padding: 15px;
+	color: #fff;
+	text-decoration: none;
+	display: block;
+	}
+
+.gallery .box .details .content h2 {
+	margin: 0;
+	padding: 0;
+	font-size: 20px;
+	color: #CAC5E4;	
+	font-family: poppins, arial; 
+}
+
+.gallery .box .details .content p {
+	margin: 10px 0 0;
+	padding: 0;
+	font-family: poppins, arial;
 }
 
 .pinkbox1 {
@@ -216,19 +317,24 @@ main ul li {
 	align-content: center;	
 }
 
-footer h1 {
-	font-family: poppins;
+footer h2 {
+	font-family: poppins, arial;
+	text-align: center;
+	font-size: 30px;
+}
+
+.tak p {
+	font-family: poppins, arial;
 	text-align: center;
 }
 
-footer h2 {
-	font-family: poppins;
-	text-align: center;
+.tak {
+	padding-bottom: 20px;
 }
 
 .oplysninger {
 	display: grid;
-	font-family: poppins;
+	font-family: poppins, arial;
 	text-align: center;
 	margin: 20px;
 	padding-bottom: 30px;
@@ -253,20 +359,61 @@ footer h2 {
 
 /*portfolio page mobile device*/
 
-.portfolio-page h1 {
-	font-family: poppins;
+.portfolio-page h2 {
+	font-family: poppins, arial;
 	text-align: center;
 	margin: 20px;
 }
 
+/*pentool*/
+
+.pentoolcontainer {
+  	display: inline-grid;
+}
+
+.pentoolpic {
+	padding: 40px;
+}
+
+.pentooltext {
+	padding-bottom: 10%;
+}
+
+.pentooltext h2 {
+	font-family: poppins, arial;
+	text-align: center;
+	font-weight: bold;
+	padding-bottom: 5%;
+}
+
+.pentooltext p {
+	font-family: poppins, arial;
+	text-align: center;
+	padding-bottom: 10%;
+}
 
 /*Tablet device*/
-@media only screen and (min-width: 400px) {
+@media only screen and (min-width: 700px) {
+
+.scroll {
+	width: 60px; 
+	height: 50px; 
+	font-size: 15px;
+}
+
+.scroll.top {
+	top: calc(50% - 60px); /*Hjælper med at placere diven fra toppen*/
+}
+
+.welcometext {
+	font-size: 20px;
+	padding-top: 15%;
+}
 
 .oplysninger {
 	display: grid;
 	margin: 0 auto;
-	font-family: poppins;
+	font-family: poppins, arial;
 	text-align: left;
 	grid-template-columns: auto auto;
 	justify-content: space-between;
@@ -300,6 +447,16 @@ nav ul li a:hover {
 	background-color: #E2DEF0;
 }
 
+.scroll {
+	width: 80px; 
+	height: 70px; 
+	font-size: 20px;
+}
+
+.scroll.top {
+	top: calc(50% - 80px); /*Hjælper med at placere diven fra toppen*/
+}
+
 .wrapper {
   	grid-template-columns: 1fr 1fr; 
   	grid-template-areas:
@@ -312,14 +469,13 @@ main.welcomepicture {
 }
 
 .welcometext {
-	font-family: poppins;
-	color: #482980;
 	font-size: 30px;
-	font-weight: bold;
-	text-align: center;
-	position: absolute;
-  	top: 55%;
-  	left: 50%;
+	padding-top: 23%;
+	padding-left: 45%;	
+}
+
+.welcometext ul {
+	background-color: rgba(252, 233, 243, 0.5)
 }
 
 main ul li {
@@ -333,7 +489,7 @@ main ul li {
 main ul li a {
 	font-size: 16px;
 	text-decoration: none; /*fjerner linjen under, der viser det er et link*/
-	font-family: poppins;
+	font-family: poppins, arial;
 	color: black;
 	background-color: #E2DEF0;
 	padding: 0 20px;
@@ -352,7 +508,7 @@ ul li a:hover {
 	grid-area: about;	
 }
 
-.about h1 {
+.about h2 {
 	font-size: 50px;
 }
 
@@ -360,7 +516,7 @@ ul li a:hover {
 	grid-area: kompetencer;	
 }
 
-.kompetencer h1 {
+.kompetencer h2 {
 	font-size: 50px;
 }
 
@@ -368,7 +524,7 @@ ul li a:hover {
 	height: 500px;
 }
 
-.portfolio h1 {
+.portfolio h2 {
 	font-size: 50px;
 }
 
@@ -381,16 +537,18 @@ ul li a:hover {
 	background-color: #FCE9F3;
 	margin: auto;
 	align-content: center;	
-	padding:10px;
-	}
+	padding: 10px;
+}
 
 
 /*portfolio page desktop device*/
 
-.portfolio-page h1 {
+.portfolio-page h2 {
 	font-size: 50px;
 }
 .sprite {
+	position: relative;
+	left: 32%;
 	width: 500px; 
 	height: 500px;
 	background: url('../IMG/pingvin3-01.png') 0 0 no-repeat;
@@ -400,6 +558,29 @@ ul li a:hover {
 @keyframes play {
 	0% { background-position: 0px; }
 	100% { background-position: -5000px; }
+}
+
+/*pentool*/
+
+.pentoolcontainer {
+  	display: inline-grid;
+  	grid-template-columns: auto auto;
+}
+
+.pentoolpic {
+	padding: 40px;
+}
+
+.pentooltext h2 {
+	font-family: poppins, arial;
+	text-align: center;
+	padding-top: 40px;
+	font-weight: bold;
+	padding-bottom: 30px;
+}
+
+.pentooltext p {
+	font-family: poppins, arial;
 }
 
 }
